# embedding-cost-calc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/embed_cost/: __init__.py  cli.py  estimator.py
tests/: test_cli.py  test_estimator.py  test_estimator_api.py  test_estimator_edge_cases.py  test_estimator_modes.py  test_estimator_precise.py  test_estimator_tiktoken_fallback.py  test_model_rates.py
