[tool.poetry]
name = "embedding-cost-calc"
version = "0.1.0"
description = "A lightweight Python library and CLI to estimate OpenAI embedding costs."
authors = ["Pragasen Naicker <prag.naicker@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pragnaic/embed-cost-estimator"
repository = "https://github.com/pragnaic/embed-cost-estimator"
keywords = ["openai", "embed", "embedding", "cost", "estimation", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [ { include = "embed_cost", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "*"
click = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = false

[tool.poetry.scripts]
embed-cost = "embed_cost.cli:main"

