[tool.poetry]
name = "embedding-cost-calc"
version = "1.0.0"
description = "A lightweight Python library and CLI to estimate OpenAI embedding costs."
authors = ["Pragasen Naicker <pnaicker.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pragasennaicker/embedding-cost-calc"
repository = "https://github.com/pragasennaicker/embedding-cost-calc"
keywords = ["openai", "embed", "embedding", "cost", "estimation", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [ { include = "embed_cost", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "*"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = false

[tool.poetry.scripts]
embed-cost = "embed_cost.cli:main"

